# auto-genoflu

./: .gitignore  BUILD_TEST.md  COMPARISON.md  Dockerfile  Dockerfile-flumut  INDEX.md  QUICKSTART.md  README-flumut.md  README.md  SUMMARY.md  WORKFLOW.md  aws-config-flumut.json  aws-config.json  config-flumut.json  config.json  docker-compose-flumut.yml  docker-compose.yml  environment-flumut.yml  environment.yml  pyproject.toml  setup-flumut.sh
.github/workflows/: build-flumut.yml  container-build.yml
auto_flumut/: __init__.py  __main__.py  _analysis.py  _nextcloud.py  _tools.py
auto_genoflu/: __main__.py  _analysis.py  _nextcloud.py  _rename.py  _tools.py  operations.py  slurm.py
